[project]
name = "pydemos"
description = "Project that hosts documentation, examples and tutorials to help researchers expeditiously develop and deploy python-based demos."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "pydemos authors", email="pydemos@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project
dependencies = []

# This is set automatically by flit using `pydemos.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google-research/pydemos"
repository = "https://github.com/google-research/pydemos"
# Other: `documentation`, `changelog`

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install .[dev]`
dev = [
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "yapf",
]

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"
